--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.4",
+    "apollo-boost": "^0.4.7",
+    "graphql": "^15.0.0",
     "next": "9.3.4",
+    "next-with-apollo": "^5.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
