--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.4",
     "apollo-boost": "^0.4.7",
+    "codemirror": "^5.52.2",
     "graphql": "^15.0.0",
     "next": "9.3.4",
     "next-with-apollo": "^5.0.0",
