--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.4",
+    "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.4.7",
     "codemirror": "^5.52.2",
     "graphql": "^15.0.0",
     "next": "9.3.4",
     "next-with-apollo": "^5.0.0",
     "react": "16.13.1",
+    "react-codemirror2": "^7.1.0",
     "react-dom": "16.13.1"
   }
 }
